--- a/data/colors.yml
+++ b/data/colors.yml
@@ -18,6 +18,18 @@
 - class_name: "poughkeepsie"
   element: "border"
   color_name: "#469046"
+- class_name: "扬州"
+  element: "border"
+  color_name: "#E10000"
+- class_name: "shanghai"
+  element: "border"
+  color_name: "#FFA500"
+- class_name: "guangzhou"
+  element: "border"
+  color_name: "#12A182"
+- class_name: "shenzhen"
+  element: "border"
+  color_name: "#0072CE"
 - class_name: "i-was-tiny"
   element: "background-color"
   color_name: "white"
